--- a/src/components/GiphyComponent/styles.css
+++ b/src/components/GiphyComponent/styles.css
@@ -1,6 +1,26 @@
-img {
-  width: 90%;
+.giphy-image {
+  width: 100%;
   height: 400px;
   background-color: white;
-  margin: 0 auto 30px auto;
+}
+
+.loading {
+  width: 100%;
+  height: 400px;
+  background-color: black;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 1px groove rgb(227, 227, 227);
+  margin: 10px;
+  background-color: rgb(160, 160, 160);
+}
+
+.card-title {
+  margin: 5px 0 30px 0;
+  font-size: 15px;
+  font-weight: bold;
 }
