--- a/src/components/Searchbar/styles.css
+++ b/src/components/Searchbar/styles.css
@@ -1,4 +1,4 @@
-form {
+.search-form {
   display: flex;
   width: 95%;
   height: 80px;
@@ -7,12 +7,12 @@ form {
   background-color: rgb(84, 84, 84);
   padding: 10px 0 10px 0;
 }
-input {
+.input {
   width: 40%;
   height: 30px;
   font-size: 20px;
 }
-button {
+.search-button {
   height: 36px;
   width: 100px;
   font-size: 20px;
