--- a/src/components/containers/ContentContainer/styles.css
+++ b/src/components/containers/ContentContainer/styles.css
@@ -1,4 +1,11 @@
-.container {
+.main-container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.giphy-container {
   height: auto;
   width: 95%;
   background-color: rgb(62, 62, 62);
